Omnibox UI Refresh: Fix legacy focus ring for keyboard accessibility

Previously we displayed a legacy focus ring if Material Refresh was off
for full keyboard accessibilty mode on all platforms.

The CL below accidentally removed it:
https://chromium-review.googlesource.com/c/chromium/src/+/1069690

Now we are adding it back with a partial revert - and a refactor to
make the logic overall more clear. We can remove everything we are
adding in this CL once Material Refresh is permanent and launched.

Bug: 848641, 844263, 823535
Change-Id: Ife78cd9660e38f16525b55044ee0a231101534a6
Reviewed-on: https://chromium-review.googlesource.com/1082794
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Tommy Li <tommycli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563814}
Former-commit-id: 479e0af586ef7a0b0770312a9f03a13aa72910c2