chrome/browser/ui/views/toolbar/toolbar_view.h
@@ -117,6 +117,9 @@ class ToolbarView : public views::AccessiblePaneView,
     return &app_menu_icon_controller_;
   }
 
+  // AccessiblePaneView:
+  bool SetPaneFocus(View* initial_focus) override;
+
   // views::MenuButtonListener:
   void OnMenuButtonClicked(views::MenuButton* source,
                            const gfx::Point& point,
@@ -164,6 +167,7 @@ class ToolbarView : public views::AccessiblePaneView,
  protected:
   // AccessiblePaneView:
   bool SetPaneFocusAndFocusDefault() override;
+  void RemovePaneFocus() override;
 
   bool is_display_mode_normal() const {
     return display_mode_ == DISPLAYMODE_NORMAL;
